removed handlebars, added unfavorite functionality

--- a/public/test.html
+++ b/public/test.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Project II | Welcome</title>
   <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
-  <link rel="stylesheet" href="./views/css/foundation.css">
-  <link rel="stylesheet" href="./views/css/app.css">
+  <link rel="stylesheet" href="./css/foundation.css">
+  <link rel="stylesheet" href="./css/app.css">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src = "js/events.js"></script>
 </head>
@@ -101,7 +101,7 @@
         <div class="card-divider">
           Favorited Events
         </div>
-        <img src="./views/images/rectangle-1.webp">
+        <img src="./images/rectangle-1.webp">
         <div class="card-section">
           <table class="hover">
             <thead>
@@ -113,24 +113,6 @@
               </tr>
             </thead>
             <tbody id = "favorited-events">
-              <tr>
-                <td>Event Goes Here</td>
-                <td>Date Goes Here</td>
-                <!-- <td>Content Goes Here</td>
-            <td>Content Goes Here</td> -->
-              </tr>
-              <tr>
-                <td>Space Event Goes Here</td>
-                <td>Date Goes Here</td>
-                <!-- <td>Content Goes Here</td>
-            <td>Content Goes Here</td> -->
-              </tr>
-              <tr>
-                <td>Space Event Goes Here</td>
-                <td>Date Goes Here</td>
-                <!-- <td>Content Goes Here</td>
-            <td>Content Goes Here</td> -->
-              </tr>
             </tbody>
           </table>
         </div>
@@ -315,10 +297,10 @@
   </footer>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
-  <script src="./views/js/vendor/jquery.js"></script>
-  <script src="./views/js/vendor/what-input.js"></script>
-  <script src="./views/js/vendor/foundation.js"></script>
-  <script src="./views/js/app.js"></script>
+  <script src="./js/vendor/jquery.js"></script>
+  <script src="./js/vendor/what-input.js"></script>
+  <script src="./js/vendor/foundation.js"></script>
+  <script src="./js/app.js"></script>
   <script>
     $(document).foundation();
   </script>
