--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Project II | Welcome</title>
   <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
-  <link rel="stylesheet" href="./views/css/foundation.css">
-  <link rel="stylesheet" href="./views/css/app.css">
+  <link rel="stylesheet" href="./css/foundation.css">
+  <link rel="stylesheet" href="./css/app.css">
 </head>
 
 <body>
@@ -116,7 +116,7 @@
         <div class="card-divider">
           Favorited Events
         </div>
-        <img src="./views/images/rectangle-1.webp">
+        <img src="./images/rectangle-1.webp">
         <div class="card-section">
           <table class="hover">
             <thead>
@@ -330,10 +330,10 @@
   </footer>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
-  <script src="./views/js/vendor/jquery.js"></script>
-  <script src="./views/js/vendor/what-input.js"></script>
-  <script src="./views/js/vendor/foundation.js"></script>
-  <script src="./views/js/app.js"></script>
+  <script src="./js/vendor/jquery.js"></script>
+  <script src="./js/vendor/what-input.js"></script>
+  <script src="./js/vendor/foundation.js"></script>
+  <script src="./js/app.js"></script>
   <script>
     $(document).foundation();
   </script>
