--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Project II | Welcome</title>
   <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
-  <link rel="stylesheet" href="./css/foundation.css">
-  <link rel="stylesheet" href="./css/app.css">
+  <link rel="stylesheet" href="./assets/css/foundation.css">
+  <link rel="stylesheet" href="./assets/css/app.css">
 </head>
 
 <body>
 
-  <!-- <div class="top-bar">
+  <div class="top-bar">
     <div class="top-bar-left">
       <ul class="menu">
         <li class="menu-text">Space Events Site</li>
@@ -28,64 +28,25 @@
         <li><a href="#">Six</a></li>
       </ul>
     </div>
-  </div> -->
+  </div>
 
-  <!-- <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
-    <ul class="orbit-container">
-      <button class="orbit-previous" aria-label="previous"><span class="show-for-sr">Previous
-          Slide</span>&#9664;</button>
-      <button class="orbit-next" aria-label="next"><span class="show-for-sr">Next Slide</span>&#9654;</button>
-      <li class="orbit-slide is-active">
-        <img src="https://placehold.it/2000x750">
-      </li>
-      <li class="orbit-slide">
-        <img src="https://placehold.it/2000x750">
-      </li>
-      <li class="orbit-slide">
-        <img src="https://placehold.it/2000x750">
-      </li>
-      <li class="orbit-slide">
-        <img src="https://placehold.it/2000x750">
-      </li>
-    </ul>
-  </div> -->
+
   <div class="row column text-center">
     <h2>Upcoming Space Events</h2>
     <hr>
   </div>
+
   <div class="row">
+
     <div class="columns small-6">
-      <!-- <div class="column">
-      <img class="thumbnail" src="https://placehold.it/300x400">
-      <h5>Nulla At Nulla Justo, Eget</h5>
-      <p>$400</p>
-      <a href="#" class="button expanded">Buy</a>
-    </div>
-    <div class="column">
-      <img class="thumbnail" src="https://placehold.it/300x400">
-      <h5>Nulla At Nulla Justo, Eget</h5>
-      <p>$400</p>
-      <a href="#" class="button expanded">Buy</a>
-    </div>
-    <div class="column">
-      <img class="thumbnail" src="https://placehold.it/300x400">
-      <h5>Nulla At Nulla Justo, Eget</h5>
-      <p>$400</p>
-      <a href="#" class="button expanded">Buy</a>
-    </div>
-    <div class="column">
-      <img class="thumbnail" src="https://placehold.it/300x400">
-      <h5>Nulla At Nulla Justo, Eget</h5>
-      <p>$400</p>
-      <a href="#" class="button expanded">Buy</a>
-    </div> -->
+
       <table class="hover" id="events-table">
         <thead>
           <tr>
             <th width="200">Event</th>
             <th>Date</th>
             <!-- <th width="150">Table Header</th> -->
-          <!-- <th width="150">Table Header</th> -->
+            <!-- <th width="150">Table Header</th> -->
           </tr>
         </thead>
         <tbody>
@@ -93,30 +54,33 @@
             <td>Space Event Goes Here</td>
             <td>Date Goes Here</td>
             <td><button type="button" class="hollow button success">Select</button></td>
-          <!-- <td>Content Goes Here</td> -->
+            <!-- <td>Content Goes Here</td> -->
           </tr>
           <tr>
             <td>Space Event Goes Here</td>
             <td>Date Goes Here</td>
             <td><button type="button" class="hollow button success">Select</button></td>
-          <!-- <td>Content Goes Here</td> -->
+            <!-- <td>Content Goes Here</td> -->
           </tr>
           <tr>
             <td>Space Event Goes Here</td>
             <td>Date Goes Here</td>
             <td><button type="button" class="hollow button success">Select</button></td>
-          <!-- <td>Content Goes Here</td> -->
+            <!-- <td>Content Goes Here</td> -->
           </tr>
         </tbody>
       </table>
+
     </div>
+
+
 
     <div class="columns small-6">
       <div class="card" style="width: 300px;" id="favorite-events">
         <div class="card-divider">
           Favorited Events
         </div>
-        <img src="./images/rectangle-1.webp">
+        <img src="./assets/images/rectangle-1.webp">
         <div class="card-section">
           <table class="hover">
             <thead>
@@ -152,188 +116,22 @@
       </div>
     </div>
   </div>
-  <!-- <hr> -->
-  <!-- <div class="row column">
-    <div class="callout primary">
-      <h3>Really big special this week on items.</h3>
-    </div>
-  </div>
-  <hr>
-  <div class="row column text-center">
-    <h2>Some Other Neat Products</h2>
-    <hr>
-  </div>
-  <div class="row small-up-2 medium-up-3 large-up-6">
-    <div class="column">
-      <img class="thumbnail" src="https://placehold.it/300x400">
-      <h5>Nulla At Nulla Justo, Eget</h5>
-      <p>$400</p>
-      <a href="#" class="button small expanded hollow">Buy</a>
-    </div>
-    <div class="column">
-      <img class="thumbnail" src="https://placehold.it/300x400">
-      <h5>Nulla At Nulla Justo, Eget</h5>
-      <p>$400</p>
-      <a href="#" class="button small expanded hollow">Buy</a>
-    </div>
-    <div class="column">
-      <img class="thumbnail" src="https://placehold.it/300x400">
-      <h5>Nulla At Nulla Justo, Eget</h5>
-      <p>$400</p>
-      <a href="#" class="button small expanded hollow">Buy</a>
-    </div>
-    <div class="column">
-      <img class="thumbnail" src="https://placehold.it/300x400">
-      <h5>Nulla At Nulla Justo, Eget</h5>
-      <p>$400</p>
-      <a href="#" class="button small expanded hollow">Buy</a>
-    </div>
-    <div class="column">
-      <img class="thumbnail" src="https://placehold.it/300x400">
-      <h5>Nulla At Nulla Justo, Eget</h5>
-      <p>$400</p>
-      <a href="#" class="button small expanded hollow">Buy</a>
-    </div>
-    <div class="column">
-      <img class="thumbnail" src="https://placehold.it/300x400">
-      <h5>Nulla At Nulla Justo, Eget</h5>
-      <p>$400</p>
-      <a href="#" class="button small expanded hollow">Buy</a>
-    </div>
-  </div> -->
-  <!-- <hr> -->
-  <!-- <div class="row">
-    <div class="medium-4 columns">
-      <h4>Top Products</h4>
-      <div class="media-object">
-        <div class="media-object-section">
-          <img class="thumbnail" src="https://placehold.it/100x100">
-        </div>
-        <div class="media-object-section">
-          <h5>Nunc Eu Ullamcorper Orci</h5>
-          <p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-        </div>
-      </div>
-      <div class="media-object">
-        <div class="media-object-section">
-          <img class="thumbnail" src="https://placehold.it/100x100">
-        </div>
-        <div class="media-object-section">
-          <h5>Nunc Eu Ullamcorper Orci</h5>
-          <p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-        </div>
-      </div>
-      <div class="media-object">
-        <div class="media-object-section">
-          <img class="thumbnail" src="https://placehold.it/100x100">
-        </div>
-        <div class="media-object-section">
-          <h5>Nunc Eu Ullamcorper Orci</h5>
-          <p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-        </div>
-      </div>
-    </div>
-    <div class="medium-4 columns">
-      <h4>Top Products</h4>
-      <div class="media-object">
-        <div class="media-object-section">
-          <img class="thumbnail" src="https://placehold.it/100x100">
-        </div>
-        <div class="media-object-section">
-          <h5>Nunc Eu Ullamcorper Orci</h5>
-          <p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-        </div>
-      </div>
-      <div class="media-object">
-        <div class="media-object-section">
-          <img class="thumbnail" src="https://placehold.it/100x100">
-        </div>
-        <div class="media-object-section">
-          <h5>Nunc Eu Ullamcorper Orci</h5>
-          <p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-        </div>
-      </div>
-      <div class="media-object">
-        <div class="media-object-section">
-          <img class="thumbnail" src="https://placehold.it/100x100">
-        </div>
-        <div class="media-object-section">
-          <h5>Nunc Eu Ullamcorper Orci</h5>
-          <p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-        </div>
-      </div>
-    </div>
-    <div class="medium-4 columns">
-      <h4>Top Products</h4>
-      <div class="media-object">
-        <div class="media-object-section">
-          <img class="thumbnail" src="https://placehold.it/100x100">
-        </div>
-        <div class="media-object-section">
-          <h5>Nunc Eu Ullamcorper Orci</h5>
-          <p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-        </div>
-      </div>
-      <div class="media-object">
-        <div class="media-object-section">
-          <img class="thumbnail" src="https://placehold.it/100x100">
-        </div>
-        <div class="media-object-section">
-          <h5>Nunc Eu Ullamcorper Orci</h5>
-          <p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-        </div>
-      </div>
-      <div class="media-object">
-        <div class="media-object-section">
-          <img class="thumbnail" src="https://placehold.it/100x100">
-        </div>
-        <div class="media-object-section">
-          <h5>Nunc Eu Ullamcorper Orci</h5>
-          <p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-        </div>
-      </div>
-    </div>
-  </div> -->
-  <!-- <div class="callout large secondary">
-    <div class="row">
-      <div class="large-4 columns">
-        <h5>Vivamus Hendrerit Arcu Sed Erat Molestie</h5>
-        <p>Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet
-          arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie
-          augue sit.</p>
-      </div>
-      <div class="large-3 large-offset-2 columns">
-        <ul class="menu vertical">
-          <li><a href="#">One</a></li>
-          <li><a href="#">Two</a></li>
-          <li><a href="#">Three</a></li>
-          <li><a href="#">Four</a></li>
-        </ul>
-      </div>
-      <div class="large-3 columns">
-        <ul class="menu vertical">
-          <li><a href="#">One</a></li>
-          <li><a href="#">Two</a></li>
-          <li><a href="#">Three</a></li>
-          <li><a href="#">Four</a></li>
-        </ul>
-      </div>
-    </div>
-  </div> -->
+
+  
   <footer>
-      <div class="row column text-center">
-          Copyright &copy;
-          <script type="text/javascript">
-              document.write(new Date().getFullYear());
-          </script>, coffeeCoders. All Rights Reserved.
-      </div>
+    <div class="row column text-center">
+      Copyright &copy;
+      <script type="text/javascript">
+        document.write(new Date().getFullYear());
+      </script>, coffeeCoders. All Rights Reserved.
+    </div>
   </footer>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
-  <script src="./js/vendor/jquery.js"></script>
-  <script src="./js/vendor/what-input.js"></script>
-  <script src="./js/vendor/foundation.js"></script>
-  <script src="./js/app.js"></script>
+  <script src="./assets/js/vendor/jquery.js"></script>
+  <script src="./assets/js/vendor/what-input.js"></script>
+  <script src="./assets/js/vendor/foundation.js"></script>
+  <script src="./assets/js/app.js"></script>
   <script>
     $(document).foundation();
   </script>
