APOD api call for pic of day working

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,8 @@
         <div class="card-divider">
           Favorited Events
         </div>
-        <img src="./assets/images/rectangle-1.webp">
+        <!-- <img src="./assets/images/rectangle-1.webp"> -->
+        <span id=fav-img></span>
         <div class="card-section">
           <table class="hover">
             <thead>
@@ -132,7 +133,7 @@
 
     
     
-    });
+  
 
 
 
