--- a/public/members.html
+++ b/public/members.html
@@ -17,6 +17,10 @@
     <div class="top-bar-left">
       <ul class="menu">
         <li class="menu-text">Space Events Site</li>
+        <li><a class="navbar-brand" href="/logout">
+          Logout
+        </a>
+        </li>
         <li><a href="#">One</a></li>
         <li><a href="#">Two</a></li>
       </ul>
@@ -33,6 +37,7 @@
 
 
   <div class="row column text-center">
+      <div class="row column text-center" id="member-name"></div>
     <h2>Choose Your Favorite Space Events!</h2>
     <hr>
   </div>
