minor changes to members.html, displays username with welcome

--- a/public/members.html
+++ b/public/members.html
@@ -17,10 +17,7 @@
     <div class="top-bar-left">
       <ul class="menu">
         <li class="menu-text">Space Events Site</li>
-        <li><a class="navbar-brand" href="/logout">
-          Logout
-        </a>
-        </li>
+
         <li><a href="#">One</a></li>
         <li><a href="#">Two</a></li>
       </ul>
@@ -30,14 +27,17 @@
         <li><a href="#">Three</a></li>
         <li><a href="#">Four</a></li>
         <li><a href="#">Five</a></li>
-        <li><a href="#">Six</a></li>
+        <li><a class="navbar-brand" href="/logout">
+          Logout
+        </a>
+        </li>
       </ul>
     </div>
   </div>
 
 
   <div class="row column text-center">
-      <div class="row column text-center" id="member-name"></div>
+     <h3>Welcome <span id="member-name"></span>!!</h3>
     <h2>Choose Your Favorite Space Events!</h2>
     <hr>
   </div>
