--- a/public/signup.html
+++ b/public/signup.html
@@ -5,12 +5,13 @@
   <title>Passport Authentication</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-  <link href="stylesheets/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+  <link rel="stylesheet" href="./assets/css/foundation.css">
+  <link rel="stylesheet" href="./assets/css/app.css">
 </head>
 
 <body>
-  <nav class="navbar navbar-default">
+  <!-- <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
       </div>
@@ -39,9 +40,49 @@
         <p>Or log in <a href="/login">here</a></p>
       </div>
     </div>
+  </div> -->
+
+  <div class="row column text-center">
+    <h2>Sign Up</h2>
+  </div>
+
+  <div class="grid-container">
+    <div class="row">
+      <form id="signup">
+        <div class="grid-container">
+          <div class="grid-x grid-padding-x">
+            <div class="medium-6 cell">
+
+              <label>Email Address
+                <input type="email" id="email-input" placeholder="Email">
+              </label>
+            </div>
+            <div class="medium-6 cell">
+              <label>Password
+                <input type="password" id="password-input" placeholder="Password">
+              </label>
+            </div>
+          </div>
+          <div style="display: none" id="alert" class="alert alert-danger" role="alert">
+            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+            <span class="sr-only">Error:</span> <span class="msg"></span>
+          </div>
+
+      </form>
+
+      <button type="submit" id="submit" class="success button">Submit</button>
+
+
+      <p>Or sign in <a href="/login">here</a></p>
+    </div>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+  <script src="./assets/js/vendor/jquery.js"></script>
+  <script src="./assets/js/vendor/what-input.js"></script>
+  <script src="./assets/js/vendor/foundation.js"></script>
+  <script src="./assets/js/app.js"></script>
   <script type="text/javascript" src="./assets/js/signup.js"></script>
 
 </body>
