--- a/public/login.html
+++ b/public/login.html
@@ -49,12 +49,12 @@
             <div class="medium-6 cell">
 
               <label>Email Address
-                <input type="email" placeholder="Email">
+                <input type="email" id="email-input" placeholder="Email">
               </label>
             </div>
             <div class="medium-6 cell">
               <label>Password
-                <input type="password" placeholder="Password">
+                <input type="password" id="password-input" placeholder="Password">
               </label>
             </div>
           </div>
