--- a/public/members.html
+++ b/public/members.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Project II | Welcome</title>
+  <title>Starlord | Welcome</title>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
   <link rel="stylesheet" href="./assets/css/foundation.css">
@@ -19,15 +19,15 @@
       <ul class="menu">
         <li class="menu-text">Space Events Site</li>
 
-        <li><a href="#">One</a></li>
-        <li><a href="#">Two</a></li>
+        <li><a href="about.html">About</a></li>
+        <!-- <li><a href="#">Two</a></li> -->
       </ul>
     </div>
     <div class="top-bar-right">
       <ul class="menu">
-        <li><a href="#">Three</a></li>
+        <!-- <li><a href="#">Three</a></li>
         <li><a href="#">Four</a></li>
-        <li><a href="#">Five</a></li>
+        <li><a href="#">Five</a></li> -->
         <li><a class="navbar-brand" href="/logout">
             Logout
           </a>
