--- a/public/members.html
+++ b/public/members.html
@@ -9,7 +9,10 @@
   <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
   <link rel="stylesheet" href="./assets/css/foundation.css">
   <link rel="stylesheet" href="./assets/css/app.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <script src = "./assets/js/events.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Space+Mono" rel="stylesheet">
 </head>
 
 <body>
@@ -37,8 +40,8 @@
   </div>
 
 
-  <div class="row column text-center">
-    <h3>Welcome <span id="member-name"></span>!!</h3>
+  <div class="row column text-center" id="welcome-text">
+    <h3>Welcome<span id="member-name"></span></h3>
     <h2>Choose Your Favorite Space Events!</h2>
     <hr>
   </div>
