--- a/public/signup.html
+++ b/public/signup.html
@@ -8,6 +8,10 @@
   <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
   <link rel="stylesheet" href="./assets/css/foundation.css">
   <link rel="stylesheet" href="./assets/css/app.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Space+Mono" rel="stylesheet">
 </head>
 
 <body>
@@ -43,7 +47,7 @@
   </div> -->
 
   <div class="row column text-center">
-    <h2>Sign Up</h2>
+    <h2 style="color: white">Sign Up</h2>
   </div>
 
   <div class="grid-container">
@@ -53,27 +57,27 @@
           <div class="grid-x grid-padding-x">
             <div class="medium-6 cell">
 
-              <label>Email Address
+              <label style="color: white">Email Address
                 <input type="email" id="email-input" placeholder="Email">
               </label>
             </div>
             <div class="medium-6 cell">
-              <label>Password
+              <label style="color: white">Password
                 <input type="password" id="password-input" placeholder="Password">
               </label>
             </div>
           </div>
-          <div style="display: none" id="alert" class="alert alert-danger" role="alert">
+          <div style="display: none; color: white" id="alert" class="alert alert-danger" role="alert">
             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
             <span class="sr-only">Error:</span> <span class="msg"></span>
           </div>
-
+        </div>
       </form>
 
       <button type="submit" id="submit" class="success button">Submit</button>
 
 
-      <p>Or sign in <a href="/login">here</a></p>
+      <p style="color: white">Or sign in <a href="/login">here</a></p>
     </div>
   </div>
 
