--- a/public/login.html
+++ b/public/login.html
@@ -8,10 +8,6 @@
   <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
   <link rel="stylesheet" href="./assets/css/foundation.css">
   <link rel="stylesheet" href="./assets/css/app.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto|Space+Mono" rel="stylesheet">
 </head>
 
 <body>
@@ -42,7 +38,7 @@
     </div>
   </div> -->
   <div class="row column text-center">
-    <h2 style="color: white">Sign In</h2>
+    <h2>Sign In</h2>
   </div>
 
   <div class="grid-container">
@@ -52,22 +48,22 @@
           <div class="grid-x grid-padding-x">
             <div class="medium-6 cell">
 
-              <label style="color: white">Email Address
+              <label>Email Address
                 <input type="email" placeholder="Email">
               </label>
             </div>
             <div class="medium-6 cell">
-              <label style="color: white">Password
+              <label>Password
                 <input type="password" placeholder="Password">
               </label>
             </div>
           </div>
-        </div>
+
       </form>
 
       <button type="submit" id="submit" class="success button">Submit</button>
 
-      <p style="color: white">Or sign up <a href="/">here</a></p>
+      <p>Or sign up <a href="/">here</a></p>
     </div>
   </div>
 
