styling_changes_sam

--- a/public/signup.html
+++ b/public/signup.html
@@ -53,12 +53,12 @@
           <div class="grid-x grid-padding-x">
             <div class="medium-6 cell">
 
-              <label>Email Address
+              <label id = "email">Email Address
                 <input type="email" id="email-input" placeholder="Email">
               </label>
             </div>
             <div class="medium-6 cell">
-              <label>Password
+              <label id = "pass">Password
                 <input type="password" id="password-input" placeholder="Password">
               </label>
             </div>
