--- a/public/login.html
+++ b/public/login.html
@@ -48,12 +48,12 @@
           <div class="grid-x grid-padding-x">
             <div class="medium-6 cell">
 
-              <label>Email Address
+              <label id = "email">Email Address
                 <input type="email" placeholder="Email">
               </label>
             </div>
             <div class="medium-6 cell">
-              <label>Password
+              <label id = "pass">Password
                 <input type="password" placeholder="Password">
               </label>
             </div>
