--- a/public/about.html
+++ b/public/about.html
@@ -26,7 +26,7 @@
             <li class="menu-text">Space Events Site</li>
     
             <li><a href="about.html">About</a></li>
-            <!-- <li><a href="#">Two</a></li> -->
+            <li><a href="members.html">Home</a></li>
           </ul>
         </div>
         <div class="top-bar-right">
