stargazing page and much more

--- a/public/about.html
+++ b/public/about.html
@@ -25,8 +25,8 @@
           <ul class="menu">
             <li class="menu-text">Space Events Site</li>
     
-            <li><a href="about.html">About</a></li>
-            <li><a href="members.html">Home</a></li>
+            <li><a href="/members">Home</a></li>
+            <li><a href="/stargaze">Upcoming Stargaze Dates</a></li>
           </ul>
         </div>
         <div class="top-bar-right">
