--- a/public/members.html
+++ b/public/members.html
@@ -19,7 +19,8 @@
       <ul class="menu">
         <li class="menu-text">Space Events Site</li>
 
-        <li><a href="about.html">About</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/stargaze">Upcoming Stargaze Dates</a></li>
         <!-- <li><a href="#">Two</a></li> -->
       </ul>
     </div>
@@ -98,57 +99,6 @@
       </script>, coffeeCoders. All Rights Reserved.
     </div>
   </footer>
-
-
-
-  <script type="text/javascript">
-
-    // $.get("/api/events", function (data) {
-    //   console.log(data);
-
-    //   for (var i = 0; i < data.length; i++) {
-
-    //     // $("#events-table").append("<tr><td id='title data-id=" + data[i].id + ">" + data[i].title + "</td><td id='date'>" + data[i].date + "</td><td>" + '<button type="button" class="hollow button success" id="fav-btn">Select</button>' + "</td></tr>");
-
-    //     $("#events-table").append("<tr><td id='title'"> + data[i].title + "</td><td> id='date'>" + data[i].date + "</td><td>" + '<button type="button" class="hollow button success" id="fav-btn">Select</button>' + "</td></tr>");
-    //   };
-
-    // });
-
-
-
-    // $("#fav-btn").on("click", function (event) {
-    //   var newFavorite = {
-    //     title: $("#title").val().trim(),
-    //     date: $("#date").val().trim(),
-    //     id: $("#data-id").val().trim(),
-    //     favorited: true
-    //   };
-    //   $("favorites-table").append("<tr><td>" + newFavorite.title + "</td><td>" + newFavorite.date + "</td></tr>");
-
-    //   $.ajax(
-    //     {
-    //       url: "/api/events/",
-    //       type: "PUT",
-    //       data: newFavorite,
-    //     });
-
-    //   event.preventDefault();
-    // });
-
-
-
-
-
-
-
-
-
-
-
-  </script>
-
-
 
 
 
