Revert "fixed login form issue"

--- a/public/login.html
+++ b/public/login.html
@@ -43,7 +43,7 @@
 
   <div class="grid-container">
     <div class="row">
-      <form class="login">
+      <form>
         <div class="grid-container">
           <div class="grid-x grid-padding-x">
             <div class="medium-6 cell">
@@ -59,9 +59,9 @@
             </div>
           </div>
 
-          <button type="submit" id="submit" class="success button">Submit</button>
       </form>
 
+      <button type="submit" id="submit" class="success button">Submit</button>
 
       <p>Or sign up <a href="/">here</a></p>
     </div>
