added nav bar transparency, tweaked table sizes

--- a/public/members.html
+++ b/public/members.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <div class="top-bar">
+  <div class="top-bar" style="opacity: 0.7;">
     <div class="top-bar-left">
       <ul class="menu">
         <li class="menu-text">Space Events Site</li>
@@ -52,7 +52,7 @@
       <table class="hover" id="events-table">
         <thead>
           <tr>
-            <th width="200">Event</th>
+            <th>Event</th>
             <th>Date</th>
             <!-- <th width="150">Table Header</th> -->
             <!-- <th width="150">Table Header</th> -->
@@ -67,17 +67,17 @@
 
 
     <div class="columns small-6">
-      <div class="card" style="width: 400px;" id="favorites-table">
+      <div class="card" id="favorites-table">
         <div class="card-divider">
           Favorited Events
         </div>
         <!-- <img src="./assets/images/rectangle-1.webp"> -->
-        <span id=fav-img></span>
+        <span id="fav-img"></span>
         <div class="card-section">
           <table class="hover">
             <thead>
               <tr>
-                <th width="200">Event</th>
+                <th>Event</th>
                 <th>Date</th>
                 <!-- <th width="150">Table Header</th>
             <th width="150">Table Header</th> -->
