--- a/public/stargazing.html
+++ b/public/stargazing.html
@@ -17,7 +17,7 @@
 
 <body>
 
-  <div class="top-bar">
+  <div class="top-bar" style="opacity: 0.7;">
     <div class="top-bar-left">
       <ul class="menu">
         <li class="menu-text">Space Events Site</li>
