--- a/public/members.html
+++ b/public/members.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <div class="top-bar" style="opacity: 0.7;">
+  <div class="top-bar" style="opacity: 0.7">
     <div class="top-bar-left">
       <ul class="menu">
         <li class="menu-text">Space Events Site</li>
@@ -59,7 +59,7 @@
             <!-- <th width="150">Table Header</th> -->
           </tr>
         </thead>
-        <tbody id = "events">
+        <tbody id ="events">
         </tbody>
       </table>
 
@@ -84,7 +84,7 @@
             <th width="150">Table Header</th> -->
               </tr>
             </thead>
-            <tbody id = "favorited-events">
+            <tbody id ="favorited-events">
             </tbody>
           </table>
         </div>
