added font-awesome icons, some other cosmetic tweaks

--- a/public/about1.html
+++ b/public/about1.html
@@ -44,7 +44,7 @@
   <div class="row medium-8 large-7 columns">
 
     <div class="blog-post">
-      <h3>Your star-gazing source </h3>
+      <h3>Plan your next star gazing session</h3>
       <!-- <img class="thumbnail" src="https://placehold.it/850x350"> -->
       <p>Now what are the possibilities of warp drive? Cmdr Riker's nervous system has been invaded by an unknown microorganism. The organisms fuse to the nerve, intertwining at the molecular level. That's why the transporter's biofilters couldn't extract it. The vertex waves show a K-complex corresponding to an REM state. The engineering section's critical. Destruction is imminent. Their robes contain ultritium, highly explosive, virtually undetectable by your transporter.</p>
       <!-- <div class="callout">
