--- a/public/login.html
+++ b/public/login.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
   <link rel="stylesheet" href="./assets/css/foundation.css">
   <link rel="stylesheet" href="./assets/css/app.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 
 <body>
@@ -24,19 +25,19 @@
             <div class="medium-6 cell">
 
               <label>Email Address
-                <input type="email" id="email-input" placeholder="Email">
+                <input type="email" id="email-input" placeholder="email">
               </label>
             </div>
             <div class="medium-6 cell">
               <label>Password
-                <input type="password" id="password-input" placeholder="Password">
+                <input type="password" id="password-input" placeholder="password">
               </label>
             </div>
           </div>
 
       </form>
 
-      <button type="submit" id="submit" class="success button">Submit</button>
+      <button type="submit" id="submit" class="success button"><i class="fas fa-meteor">Submit</i></button>
 
       <p>Or sign up <a href="/">here</a></p>
     </div>
