--- a/public/signup.html
+++ b/public/signup.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
   <link rel="stylesheet" href="./assets/css/foundation.css">
   <link rel="stylesheet" href="./assets/css/app.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+
+
 </head>
 
 <body>
@@ -24,12 +27,12 @@
             <div class="medium-6 cell">
 
               <label id = "email">Email Address
-                <input type="email" id="email-input" placeholder="Email">
+                <input type="email" id="email-input" placeholder="enter your email">
               </label>
             </div>
             <div class="medium-6 cell">
               <label id = "pass">Password
-                <input type="password" id="password-input" placeholder="Password">
+                <input type="password" id="password-input" placeholder="create a password">
               </label>
             </div>
           </div>
@@ -40,7 +43,7 @@
 
       </form>
 
-      <button type="submit" id="submit" class="success button">Submit</button>
+      <button type="submit" id="submit" class="success button"><i class="fas fa-meteor">Submit</i></button>
 
 
       <p>Or sign in <a href="/login">here</a></p>
