--- a/public/stargazing.html
+++ b/public/stargazing.html
@@ -10,9 +10,10 @@
   <link rel="stylesheet" href="./assets/css/foundation.css">
   <link rel="stylesheet" href="./assets/css/app.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.js"></script>
-  <script src = "https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.25/moment-timezone.js"></script>
- <script src ="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.25/moment-timezone-with-data.js"></script>
-  <script src = "./assets/js/stargaze.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.25/moment-timezone.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.25/moment-timezone-with-data.js"></script>
+  <script src="./assets/js/stargaze.js"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 
 <body>
@@ -42,28 +43,28 @@
 
 
   <div class="row column text-center">
-      <h3>Upcoming Stargazing Dates</h3>
-    <h2>Please select location below. All Times listed in CDT.</h2>
+    <h2>Upcoming Stargazing Dates</h2>
+    <h3>Please select location below. All Times listed in CDT.</h3>
     <hr>
   </div>
 
   <div class="row">
 
-<div class = "columns small-4">
-        <label>
-                Please enter City
-                <textarea placeholder="City" id = "cityChoice"></textarea>
-            </label>
-            <button type="button" class="success button" id = "submit">Find Dates</button>
-</div>    
+    <div class="columns small-4">
+      <label>
+        Enter a City
+        <textarea placeholder="City" id="cityChoice"></textarea>
+      </label>
+      <button type="button" class="success button" id="submit"><i class="fas fa-moon">Find Dates</i></button>
+    </div>
 
-<hr id = "nothing">
+    <hr id="nothing">
 
-<div class="row column text-center" id = "nothingFound">
-<h2>No results were found for that city. The forecast must be poor!</h2>
-</div>
+    <div class="row column text-center" id="nothingFound">
+      <h2>No results were found for that city. The forecast must be poor!</h2>
+    </div>
 
-<!-- <div class="columns small-4">
+    <!-- <div class="columns small-4">
 
   <label>Select State
         <select>
@@ -121,7 +122,7 @@
         </select>
       </label>
 </div> -->
-</div>
+  </div>
 
 
 
@@ -129,55 +130,55 @@
 
     <div class="columns medium-12">
 
-            <div class="grid-container">
-                    <div class="grid-x grid-padding-x small-up-2 medium-up-3">
-                      <div class="cell" id = "1">
-                        <div class="card">
-                          <img id = "weather-pic-1" src="">
-                          <div class="card-section">
-                          <h4 id = "day-1"></h4>
-                            <p id = "weather-1" style = "color: black"></p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="cell" id = "2">
-                        <div class="card">
-                          <img id = "weather-pic-2" src="">
-                          <div class="card-section">
-                            <h4 id = "day-2"></h4>
-                            <p id = "weather-2" style = "color: black"></p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="cell" id = "3">
-                        <div class="card">
-                          <img id = "weather-pic-3" src="">
-                          <div class="card-section">
-                            <h4 id = "day-3"></h4>
-                            <p id = "weather-3" style = "color: black"></p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="cell" id = "4">
-                            <div class="card">
-                              <img id = "weather-pic-4" src="">
-                              <div class="card-section">
-                                <h4 id= "day-4"></h4>
-                                <p id = "weather-4" style = "color: black"></p>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="cell" id = "5">
-                                <div class="card">
-                                  <img id = "weather-pic-5" src="">
-                                  <div class="card-section">
-                                    <h4 id = "day-5"></h4>
-                                    <p id = "weather-5" style = "color: black"></p>
-                                  </div>
-                                </div>
-                              </div>
-                    </div>
-                  </div>
+      <div class="grid-container">
+        <div class="grid-x grid-padding-x small-up-2 medium-up-3">
+          <div class="cell" id="1">
+            <div class="card">
+              <img id="weather-pic-1" src="">
+              <div class="card-section">
+                <h4 id="day-1"></h4>
+                <p id="weather-1" style="color: black"></p>
+              </div>
+            </div>
+          </div>
+          <div class="cell" id="2">
+            <div class="card">
+              <img id="weather-pic-2" src="">
+              <div class="card-section">
+                <h4 id="day-2"></h4>
+                <p id="weather-2" style="color: black"></p>
+              </div>
+            </div>
+          </div>
+          <div class="cell" id="3">
+            <div class="card">
+              <img id="weather-pic-3" src="">
+              <div class="card-section">
+                <h4 id="day-3"></h4>
+                <p id="weather-3" style="color: black"></p>
+              </div>
+            </div>
+          </div>
+          <div class="cell" id="4">
+            <div class="card">
+              <img id="weather-pic-4" src="">
+              <div class="card-section">
+                <h4 id="day-4"></h4>
+                <p id="weather-4" style="color: black"></p>
+              </div>
+            </div>
+          </div>
+          <div class="cell" id="5">
+            <div class="card">
+              <img id="weather-pic-5" src="">
+              <div class="card-section">
+                <h4 id="day-5"></h4>
+                <p id="weather-5" style="color: black"></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
     </div>
 
