--- a/public/members.html
+++ b/public/members.html
@@ -24,7 +24,7 @@
         <li class="menu-text">Space Events Site</li>
 
         <li><a href="/about">About</a></li>
-        <li><a href="/stargaze">Upcoming Stargaze Dates</a></li>
+        <li><a href="/stargaze">Upcoming Stargazing Dates</a></li>
         <!-- <li><a href="#">Two</a></li> -->
       </ul>
     </div>
