--- a/public/about1.html
+++ b/public/about1.html
@@ -18,7 +18,7 @@
         <li class="menu-text">Space Events Site</li>
 
         <li><a href="/members">Home</a></li>
-        <li><a href="/stargaze">Upcoming Stargaze Dates</a></li>
+        <li><a href="/stargaze">Upcoming Stargazing Dates</a></li>
       </ul>
     </div>
     <div class="top-bar-right">
@@ -43,8 +43,8 @@
 
   <div class="row medium-8 large-7 columns">
 
-    <div class="blog-post">
-      <h3>Plan your next star gazing session</h3>
+    <div class="blog-post text-center">
+      <h3>Plan your next stargazing session</h3>
       <!-- <img class="thumbnail" src="https://placehold.it/850x350"> -->
       <p>Now what are the possibilities of warp drive? Cmdr Riker's nervous system has been invaded by an unknown microorganism. The organisms fuse to the nerve, intertwining at the molecular level. That's why the transporter's biofilters couldn't extract it. The vertex waves show a K-complex corresponding to an REM state. The engineering section's critical. Destruction is imminent. Their robes contain ultritium, highly explosive, virtually undetectable by your transporter.</p>
       <!-- <div class="callout">
